# qt_practise

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  readme.md  window.cpp  window.h
bogo/10_qfile/: CMakeLists.txt  main.cpp
bogo/11_resourcefiles/: CMakeLists.txt  main.cpp  resources.qrc
bogo/12_qcombobox/: CMakeLists.txt  comboboxdialog.cpp  comboboxdialog.hpp  comboboxdialog.ui  main.cpp
bogo/13_qlistwidget/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
bogo/14_qtreewidget/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
bogo/15_qaction/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
bogo/16_qstatusbar/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
bogo/17_qmessagebox/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
bogo/18_qtimer/: CMakeLists.txt  main.cpp  mytimer.cpp  mytimer.h
bogo/19_qlist/: CMakeLists.txt  main.cpp
bogo/1_helloworld/: CMakeLists.txt  readme.md
bogo/20_qlistiterator/: CMakeLists.txt  main.cpp
bogo/21_qmutablelistiterator/: CMakeLists.txt  main.cpp
bogo/22_qlinkedlist/: CMakeLists.txt  main.cpp
bogo/23_qmap/: CMakeLists.txt  main.cpp
bogo/24_qhash/: CMakeLists.txt  main.cpp
bogo/25_qstringlist/: CMakeLists.txt  main.cpp
bogo/26_qtextstream/: CMakeLists.txt  main.cpp  simple.txt
bogo/27_qmimetype/: CMakeLists.txt  main.cpp
bogo/28_qfile/: CMakeLists.txt  main.cpp  serial.txt
bogo/29_qfile_2/: CMakeLists.txt  main.cpp  st.txt
bogo/2_signalsslots/: main.cpp  mainwindow.ui
bogo/30_tooltips/: CMakeLists.txt  main.cpp  resources.qrc  tooltipsdialog.cpp  tooltipsdialog.h  tooltipsdialog.ui
bogo/31_qpainter/: CMakeLists.txt  main.cpp  painterdialog.cpp  painterdialog.h
bogo/3_mainwindowaction/: mainwindow.cpp
bogo/4_imageviewer/: CMakeLists.txt  imageviewer.ui  main.cpp
bogo/5_layouts/: CMakeLists.txt  layoutdialog.cpp  layoutdialog.h  layoutdialog.ui  main.cpp
bogo/6_layouts_code/: CMakeLists.txt  main.cpp
bogo/7_grid_layout/: CMakeLists.txt  main.cpp
bogo/8_splitter/: CMakeLists.txt  main.cpp  splitterdialog.cpp  splitterdialog.h  splitterdialog.ui
bogo/9_qdir/: CMakeLists.txt  drives.cpp  exists.cpp  fileinfolist.cpp  mkpath.cpp
bogo/helloworld/: main.cpp  readme.md
bogo/imageviewer/: CMakeLists.txt  imageviewer.cpp  imageviewer.h
bogo/mainwindowaction/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui  mydialog.cpp  mydialog.h
bogo/signalsslots/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qtwiki/: CMakeLists.txt  check_main.cpp  main.cpp  window.cpp  window.h
zet_1/: CMakeLists.txt  main.cpp  version.cpp
zet_2/: CMakeLists.txt  building.cpp  html_escape.cpp  looping.cpp  modify.cpp  output.cpp
zet_3/: curdatetime.cpp  customtimeformats.cpp  datetime.cpp  init.cpp  julianday.cpp  nofdays.cpp  timeformats.cpp
zet_4/: book.cpp  mylist.cpp  myqmap.cpp  myset.cpp  mystringlist.cpp  myvector.cpp
zet_5/: dirs.cpp  file_path.cpp  file_size.cpp  file_times.cpp  list_dir.cpp  special_paths.cpp  write2file.cpp
zet_6/: CMakeLists.txt  icon.cpp  tooltip.cpp
zet_7/: am_main.cpp  ca_main.cpp  icons.md  skeleton.cpp  toolbar.cpp  toolbar.h
zet_7/.clangd/index/: main.cpp.3D87466075171BC7.idx
zet_8/: buttons.h  calc_main.cpp  calculator.h  form.h  nest_main.cpp  nesting.cpp  nesting.h  review.cpp  verticalbox.cpp
zet_8/.clangd/index/: absolute.cpp.3E767EC211DAC1C5.idx
zet_9/: click.h  disconnect.cpp  keypress.cpp  keypress.h  move.cpp  timer_main.cpp
zetcode/zet_1/: CMakeLists.txt
zetcode/zet_10/: CMakeLists.txt  combo_main.cpp  combobox.cpp  combobox.h  label.cpp  label.h  lbl_main.cpp  le_main.cpp  ledit.cpp  ledit.h  sb_main.cpp  slider.cpp  slider.h  slider_main.cpp  spin_main.cpp  spinbox.cpp  spinbox.h  statusbar.cpp  statusbar.h
zetcode/zet_11/: CMakeLists.txt  check_main.cpp  checkbox.cpp  checkbox.h  list_main.cpp  listwidget.cpp  listwidget.h  pix_main.cpp  pixmap.cpp  pixmap.h  prog_main.cpp  progressbar.cpp  progressbar.h  splitter.cpp  splitter.h  splt_main.cpp  table.cpp  table.h  table_main.cpp
zetcode/zet_12/: CMakeLists.txt  clrs_main.cpp  colours.cpp  colours.h  donut.cpp  donut.h  donut_main.cpp  gradient.cpp  gradient.h  gradient_main.cpp  lines.cpp  lines.h  lines_main.cpp  patterns.cpp  patterns.h  ptrns_main.cpp  puff.cpp  puff.h  puff_main.cpp  rgradient.cpp  rgradient.h  rgradient_main.cpp  shapes.cpp  shapes.h  shapes_main.cpp  trans_main.cpp  transparent.cpp  transparent.h
zetcode/zet_13/: CMakeLists.txt  burning.cpp  burning.h  main.cpp  widget.cpp  widget.h
zetcode/zet_14/: CMakeLists.txt  main.cpp  snake.cpp  snake.h
zetcode/zet_15/: CMakeLists.txt  ball.cpp  ball.h  breakout.cpp  breakout.h  brick.cpp  brick.h  main.cpp  paddle.cpp  paddle.h
zetcode/zet_2/: access.cpp  comparing.cpp  init.cpp  length.cpp  letters.cpp  main.cpp  right_align.cpp  substrings.cpp
zetcode/zet_3/: CMakeLists.txt  battles.cpp  comparedates.cpp  customdateformats.cpp  dateformats.cpp  daystofrom.cpp  leapyear.cpp  unixepoch.cpp  utclocal.cpp  validity.cpp  weekday.cpp
zetcode/zet_4/: CMakeLists.txt  sortcustomclass.cpp
zetcode/zet_5/: CMakeLists.txt  copy_file.cpp  owner.cpp  permissions.cpp  read_file.cpp
zetcode/zet_6/: cursors.cpp  plusminus.cpp  plusminus.h  plusminus_main.cpp  pushbutton.cpp
zetcode/zet_7/: CMakeLists.txt  anothermenu.cpp  anothermenu.h  checkable.cpp  checkable.h  main.cpp  simplemenu.cpp  simplemenu.h  sk_main.cpp  skeleton.h  tb_main.cpp
zetcode/zet_8/: CMakeLists.txt  absolute.cpp  btns_main.cpp  buttons.cpp  calculator.cpp  form.cpp  form_main.cpp  rev_main.cpp  review.h  vb_main.cpp  verticalbox.h
zetcode/zet_9/: CMakeLists.txt  click.cpp  click_main.cpp  dc_main.cpp  disconnect.h  kp_main.cpp  move.h  mv_main.cpp  timer.cpp  timer.h
